# hacker-simulator

./: .gitignore  .markdown  CONTRIBUTING.md  HackerSimulator2077-Linux.spec  HackerSimulator2077-Windows.spec  HackerSimulator2077.spec  HackerSimulator_Installer.command  HackerSimulator_Installer.spec  LICENSE  MANIFEST.in  Makefile  README.md  Soluciones.txt  build_windows.py  config_ui.json  create_logo.py  cyberdex.py  cyberdex.py.backup  hacker_simulator_ui.py  install.sh  installer.py  pyproject.toml  requirements-dev.txt  run.bat  run.sh  save_ui.json  setup.py
.github/workflow/: build-mac.yml
.github/workflows/: build-mac.yml
Documentation/: GUIDE.md
docs/: GUIDE.txt  index.html  script.js  style.css
docs/guides/: beginners.html  developer.html  faq.html  guide.html  minigames.html  quickstart.html  tools.html
